--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <img src="Photos/GRAD4.JPEG" alt="GradPics" width="200" height="200">
         </div>
         <div class="gallery-item">
-            <img src="Photos/GRAD3.jpg" alt="GradPics" width="200" height="200">
+            <img src="Photos/GRAD3.JPG" alt="GradPics" width="200" height="200">
         </div>
         <br>
         <div class="gallery-item">
