--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     <!-- About Section -->
     <section id="about" class="fade-in">
         <h1>Kyeesha Marshall</h1>
-        <p>Hey there! My name is Kyeesha Marshall, and I’m a proud recent graduate of North Carolina A&T State University with a degree in Computer Science. I have a deep passion for web design and front-end development. I love creating engaging, and user-friendly digital experiences. This portfolio provides insight into my life by highlighting some of my most important projects, skills, and a bit of my personality. As you’ve probably guessed, my favorite color is purple, and it’s shown throughout this site to reflect my creative and vibrant approach to design. <p/>
-        <p>Look around, and don't hesitate to get in touch—I'd love to connect and collaborate! </p>
+        <p>Hey there! My name is Kyeesha Marshall, and I’m a proud recent graduate of North Carolina A&T State University with a degree in Computer Science. I’m passionate about technology and how it can be used to make a real impact on society. <p/>
+        <p> This portfolio provides a glimpse into my journey by highlighting some of my most meaningful projects, key skills, and a bit of my personality. As you’ve probably guessed, my favorite color is purple, and it’s shown throughout this site to reflect my creative and vibrant approach to design. </p> 
+        <p>Look around, and don't hesitate to get in touch. I'd love to connect and collaborate! </p>
         <img src="Photos/Headshot.png" alt="Headshot" width="300" height="300">
 
     </section>
