--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>Truecolor GAN Project</h3>
-            <p>Led a team to develop a GAN-based application for generating COVID-related medical images. Responsible for front-end development and team coordination.</p>
+            <p>Led a team to develop a GAN-based application for generating COVID-related medical images. Responsible for front-end design, team coordination, and optimizing model performance for faster image generation..</p>
             <a href="https://www.canva.com/design/DAGcr_nnHtk/c1zrv624Fjh2KFUHkNsTag/view?utm_content=DAGcr_nnHtk&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h91f0e48daa">View Presentation</a>
         </div>
         <div class="project">
